force-app/main/default/objects/Computer__c/fields/Capcity__c.field-meta.xml
<CustomField>
    <fullName>Capcity__c</fullName>
    <label>Capcity</label>
    <length>200</length>
    <type>Text</type>
</CustomField>