force-app/main/default/objects/Computer__c/fields/HardDiskSize_GB__c.field-meta.xml
<CustomField>
    <fullName>HardDiskSize_GB__c</fullName>
    <label>HardDiskSize(GB)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>