force-app/main/default/objects/Computer__c/fields/Processor_Ghz__c.field-meta.xml
<CustomField>
    <fullName>Processor_Ghz__c</fullName>
    <label>Processor(Ghz)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>