force-app/main/default/objects/Computer__c/fields/StudentQL__c.field-meta.xml
<CustomField>
    <fullName>StudentQL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>StudentQL</label>
    <referenceTo>StudentQL__c</referenceTo>
    <relationshipLabel>Computers</relationshipLabel>
    <relationshipName>Computers</relationshipName>
    <type>Lookup</type>
</CustomField>